# nixos-config

./: README.md  configuration.nix  flake.nix  hardware-configuration.nix  home.nix
.claude/: settings.local.json
.claude/skills/: email.md
config/git/: config
config/ssh/: config
configuration/darwin/: default.nix
configuration/nixos/: default.nix  home.nix  packages.nix
dotfiles/ghostty/: config
dotfiles/git/: config
dotfiles/nvim/: init.lua
dotfiles/ssh/: config
dotfiles/tmuxp/: polar.yaml
dotfiles/wezterm/: kanagawa-dragon.lua  wezterm.lua
home/: default.nix
home/modules/: cli.nix  core.nix  default.nix  dotfiles.nix  git.nix  nvim.nix  tmux.nix  waybar.nix  wofi.nix  zsh.nix
hosts/burken/: configuration.nix
hosts/darwin/: default.nix
hosts/dev/: conf.nix  configuration.nix  hardware-configuration.nix  home.nix
hosts/framework/: configuration.nix  hardware.nix  home.nix  settings.nix
hosts/mbp/: configuration.nix  home.nix  settings.nix
hosts/nixos/: default.nix  desktop-home.nix  framework-amd-7040.nix  utm-aarch64.nix
lib/: kit.nix
modules/apps/: browsers.nix  options.nix
modules/darwin/: casks.nix  default.nix  defaults.nix  home.nix  homebrew.nix  packages.nix  skhd.nix  system.nix  (+1 more)
modules/shared/scripts/email-cli/: Cargo.toml  default.nix
modules/shared/scripts/email-cli/src/: email.rs  himalaya.rs  main.rs
modules/shared/scripts/email-cli/src/commands/: accounts.rs  action.rs  analyze.rs  folders.rs  list.rs  mod.rs  read.rs  reply.rs  send.rs  unsubscribe.rs
sh/: default.nix  t.nix
themes/: default.nix
(+103 files in other folders)
