[package]
name = "email-cli"
version = "0.1.0"
edition = "2021"
description = "Email management CLI for working through email backlog"
authors = ["Birk Jernstrom"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
colored = "2"
tabled = "0.15"

[profile.release]
lto = true
strip = true
